# moonlang

./: .gitignore  LICENSE  README.md  README.zh-CN.md  llvm_libs.rsp  version.json
lib/pcre2/: CMakeLists.txt
scripts/: build_auto.py  build_embedded.bat  build_gui_dll.bat  build_msvc.bat  build_res_link.bat  build_temp.bat  gen_version.ps1  gen_version.sh  link_llvm.cmd  pack_dist.bat  rebuild_all.bat
src/frontend/: alias_loader.cpp  alias_loader.h  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
src/llvm/: llvm_codegen.cpp  llvm_codegen.h  llvm_codegen_builtin.cpp  llvm_codegen_emit.cpp  llvm_codegen_expr.cpp  llvm_codegen_init.cpp  llvm_codegen_opt.cpp  llvm_codegen_stmt.cpp  moonc_llvm.cpp  moonc_llvm.rc  moonrt.cpp  moonrt.h  moonrt_async.cpp  moonrt_bigint.cpp  moonrt_builtin.cpp  moonrt_channel.cpp  moonrt_core.cpp  moonrt_core.h  moonrt_dict.cpp  moonrt_dll.cpp  moonrt_ffi.cpp  moonrt_ffi.h  moonrt_ffi_callback.cpp  moonrt_ffi_parser.cpp  moonrt_gui.cpp  moonrt_gui_linux.cpp  moonrt_gui_macos.mm  moonrt_hal.cpp  moonrt_io.cpp  moonrt_json.cpp  moonrt_list.cpp  moonrt_math.cpp  moonrt_network.cpp  moonrt_platform.h  moonrt_regex.cpp  moonrt_regex.h  moonrt_string.cpp  moonrt_tls.cpp  moonrt_tls.h  version.h
src/llvm/hal/: hal.h  hal_esp32.cpp  hal_linux.cpp  hal_pico.cpp  hal_stm32.cpp  hal_stub.cpp
webview2/: Microsoft.Web.WebView2.nuspec
webview2/_rels/: .rels
